# oxen-mobile-wallet

./: Deployment.md  README.md  privacy-policy.md  pubspec.yaml
.github/: pull_request_template.md
android/app/: build.gradle  proguard-rules.pro
assets/: changelog.yml  node_list.yml  testnet_node_list.yml
assets/faq/: faq_de.json  faq_en.json
assets/text/: Terms_of_Use.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  palette.dart  router.dart  themes.dart
lib/l10n/: intl_de.arb  intl_en.arb  intl_fr.arb
lib/src/: start_updating_price.dart
lib/src/node/: node.dart  node_list.dart  sync_status.dart
lib/src/reactions/: set_reactions.dart
lib/src/screens/: base_page.dart
lib/src/wallet/: crypto_amount_format.dart  wallet.dart  wallet_description.dart  wallet_info.dart  wallet_type.dart  wallets_manager.dart
lib/src/widgets/: address_text_field.dart  blockchain_height_widget.dart  nav_bar.dart  present_picker.dart  primary_button.dart  seed_widget.dart  (+2 more)
quenero_coin/: README.md  pubspec.yaml
quenero_coin/android/: CMakeLists.txt  build.gradle  settings.gradle
quenero_coin/android/jni/: quenero_jni.cpp
quenero_coin/android/src/main/: AndroidManifest.xml
quenero_coin/android/src/main/kotlin/io/quenero/coin/: QueneroCoinPlugin.kt
quenero_coin/ios/: quenero_coin.podspec
quenero_coin/lib/: account_list.dart  quenero_coin_structs.dart  stake.dart  subaddress_list.dart  transaction_history.dart  wallet.dart  wallet_manager.dart
test/: widget_test.dart
tool/: download-android-deps.sh  download-ios-deps.sh
(+129 files in other folders)
